<resources>
    <string name="app_name">Stock Simulator</string>
    <string name="content_description">Content Description</string>
    <string name="Need_help">Need help?</string>
    <string name="sug_an_improvement">Suggest an improvement</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="ask_a_question_body">Help, support or any other queries.</string>
    <string name="sug_an_improvement_body">New ideas and desired enhancements for this app.</string>
    <string name="Report_a_bug">Report a bug</string>
    <string name="Report_a_bug_body">Something in this app is broken or not working as expected.</string>
    <string name="enter_email_heading">We will contact you soon regarding your experience and feedback when we resolve your issue.</string>
    <string name="enter_email_hint">Enter your email id…</string>
    <string name="feedback_hint">Write your %s here…</string>
    <string name="report_a_bug_heading">Please as detailed as possible. What did you expect and what happened instead?</string>
    <string name="suggest_an_improvement_heading">How can we improve your experience using this app?</string>
    <string name="ask_a_question_heading">Ask us anything.</string>
    <string name="screen_shots_text">Screen shots of the application</string>
    <string name="collecting_steps">To help us fix the problem, your report will include a list of steps to reproduce the issue.</string>
    <string name="submit">Submit</string>
    <string name="report">report</string>
    <string name="suggestion">suggestion</string>
    <string name="query">query</string>
    <string name="enter_email_error">Please enter a valid email id</string>
    <string name="this_can_not_be_null">This section can not be empty…</string>
    <string name="write_external_storage">Provide storage access so we can add screenshots.</string>
    <string name="add_more_images">Add more images from gallery.</string>
    <string name="noInternetConnection">Please check your internet connection…</string>
    <string name="reporting">Reporting</string>
    <string name="hello_user">Hello, %s</string>
    <string name="market_is_live">Market is live…</string>
    <string name="congrats">Congrats…</string>
    <string name="congrats_text1">Virtual %s Rs added to your account.</string>
    <string name="congrats_text2"> Invest safely</string>
    <string name="check_most_active_stock">Check Most Active Stocks</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="details">Details</string>
    <string name="current">Current : </string>
    <string name="change_text">Change : </string>
    <string name="high">High : </string>
    <string name="low">Low : </string>
    <string name="top_gainer">Top Gainer</string>
    <string name="top_looser">Top Looser</string>
    <string name="most_Active">Most Active</string>
    <string name="shake_phone_dialog_txt">Shake your phone to report a bug,\nsuggest an improvement or for any query.</string>
</resources>