<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/corner_8_secondary_color"
    android:padding="@dimen/d_8"
    android:layout_margin="@dimen/d_8">

    <TextView
        android:id="@+id/index_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:text="NIFTY 50"
        android:textSize="@dimen/s_20"
        android:textColor="@color/white"
        android:fontFamily="@font/semi_cond_semibold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/details_text"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/details"
        android:textSize="@dimen/s_20"
        android:textColor="@color/white"
        android:fontFamily="@font/semi_cond_light"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:drawableEndCompat="@drawable/ic_right_arrow" />


    <LinearLayout
        android:id="@+id/linear_layout_1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:weightSum="2"

        app:layout_constraintTop_toBottomOf="@id/index_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/current_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0"

            android:text="@string/current"
            android:textSize="@dimen/s_16"
            android:fontFamily="@font/semi_cond_light"
            android:textColor="@color/white"

            app:layout_constraintTop_toBottomOf="@id/index_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/current_val"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:layout_marginStart="@dimen/d_2"

            tools:text="17,286.90"
            android:textSize="@dimen/s_16"
            android:fontFamily="@font/semi_cond_light"
            android:textColor="@color/white"

            app:layout_constraintEnd_toEndOf="@id/current_text"
            app:layout_constraintTop_toBottomOf="@id/current_text"
            app:layout_constraintStart_toStartOf="parent"/>



        <TextView
            android:id="@+id/high_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0"

            android:text="@string/high"
            android:textSize="@dimen/s_16"
            android:fontFamily="@font/semi_cond_light"
            android:textColor="@color/white"

            app:layout_constraintTop_toBottomOf="@id/index_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/high_val"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:layout_marginStart="@dimen/d_2"

            tools:text="17,286.90"
            android:textSize="@dimen/s_16"
            android:fontFamily="@font/semi_cond_light"
            android:textColor="@color/white"

            app:layout_constraintEnd_toEndOf="@id/current_text"
            app:layout_constraintTop_toBottomOf="@id/current_text"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:weightSum="2"

        app:layout_constraintTop_toBottomOf="@id/linear_layout_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/change_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0"

            android:text="@string/change_text"
            android:textSize="@dimen/s_16"
            android:fontFamily="@font/semi_cond_light"
            android:textColor="@color/white"

            app:layout_constraintTop_toBottomOf="@id/index_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/change_val"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:layout_marginStart="@dimen/d_2"


            tools:text="17,286.90"
            android:textSize="@dimen/s_16"
            android:fontFamily="@font/semi_cond_light"
            android:textColor="@color/white"

            app:layout_constraintEnd_toEndOf="@id/current_text"
            app:layout_constraintTop_toBottomOf="@id/current_text"
            app:layout_constraintStart_toStartOf="parent"/>



        <TextView
            android:id="@+id/low_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0"

            android:text="@string/low"
            android:textSize="@dimen/s_16"
            android:fontFamily="@font/semi_cond_light"
            android:textColor="@color/white"

            app:layout_constraintTop_toBottomOf="@id/index_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/low_val"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"

            android:layout_marginStart="@dimen/d_2"

            tools:text="17,286.90"
            android:textSize="@dimen/s_16"
            android:fontFamily="@font/semi_cond_light"
            android:textColor="@color/white"

            app:layout_constraintEnd_toEndOf="@id/current_text"
            app:layout_constraintTop_toBottomOf="@id/current_text"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>

    <com.sourabhverma.stocksimulator.ui.LineChart
        android:id="@+id/lineChart"

        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:layout_marginTop="@dimen/d_8"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_2"/>


</androidx.constraintlayout.widget.ConstraintLayout>